2006-08-23  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  Change getStreamData to return 'url' and 'description'

2006-08-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py:
	Set mood of component to hungry instead of sad when receiving
	an EOS.  The EOS is caused when it disconnects from it's feeder.

2006-08-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/boot.py.in:
	  reinstall our packager's import hooks
	  after installing the reactor
	  also, allow specifying whether we want gst as part of the boot
	  process, so we can disable it for programs that don't need it
	* flumotion/common/package.py:
	  factor out a Packager.install() method so we can reinstall the
	  import hooks
	* flumotion/twisted/compat.py:
	  add a note about the reactor overriding import hooks

2006-08-23  Andy Wingo  <wingo@pobox.com>

	* flumotion/twisted/integration.py (TimeoutException): Take some
	args so our __str__ can be more useful.
	(ProcessProtocol.timeout, Process.wait): Pass around more context
	so we can annotate our errors better.

	* flumotion/configure/configure.py: 
	* flumotion/configure/uninstalled.py.in (get): 
	* flumotion/configure/installed.py.in (get): Add 'bindir' as a
	conf variable.

2006-08-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/job/job.py:
	* flumotion/manager/manager.py:
	* flumotion/manager/worker.py:
	* flumotion/worker/worker.py:
	  remote_create only needs the nice level, not the whole config
	  Fixes a long-standing FIXME and allows me to tighten down the
	  component protocol
	* flumotion/test/test_worker_worker.py:
	  fix test for removal of .config and adding of .nice

2006-08-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/component.py:
	  guard against the mood key being set to None

2006-08-23  Michael Smith  <msmith@fluendo.com>
